# PALP

./: .commitlintrc.json  .env.example  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  .releaserc.json  .upptimerc.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  justfile  package.json
backend/: Dockerfile  conftest.py  dev_sqlite.sqlite3  entrypoint.prod.sh  gunicorn.conf.py  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  seed_coach_demo.py  seed_north_star_demo.py  seed_peer_demo.py  seed_phase5_demo.py  seed_phase6_demo.py  seed_phase7_demo.py  tmp_affect.json  tmp_consent.json  tmp_run.json
backend/accounts/: admin.py  audit.py  authentication.py  encryption.py  export_views.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/adaptive/: admin.py  apps.py  calibration.py  calibration_views.py  engine.py  engine_v2.py  models.py  serializers.py  urls.py  views.py
backend/affect/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/analytics/: admin.py  constants.py  health.py  health_urls.py  models.py  monitoring.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/assessment/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/bandit/: admin.py  apps.py  engine.py  linucb.py  models.py  services.py  urls.py  views.py
backend/benchmarks/: admin.py  apps.py  evaluator.py  loaders.py  models.py  (+5 more)
(+948 files in other folders)
